shimlang/test_scripts/errors/dict_missing_key.stderr
 1 | let d = dict();
 2 | d["missing"];
      ^
Error: Key String(7, 0, u24([0, 0, 7])) not in dict
